--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
             <th></th>
           </tr>
         </thead>
-        <tbody id="book-list"></tbody>
+        <tbody id="book-list">
+          <p>Total Books : <span id="count"></span></p>
+        </tbody>
       </table>
     </div>
     <script src="src/script.js" type="module"></script>
