--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <title>Book Haven</title>
+    <title>Book Sync</title>
   </head>
   <body>
     <div class="container mt-4 toast-containers">
       <div>
         <h1 class="display-4 text-center">
           <i class="fas fa-book-open text-primary"></i>
-          My <span class="text-primary">Book</span>Haven
+          <span class="text-primary">Book</span>Sync
         </h1>
         <form id="book-form" class="flex flex-col justify-center gap-2">
           <div class="mt-3">
